--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,8 @@
   "description": "React Frontend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "author": "Alex Aguirre",
   "license": "ISC",
