--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fittrack-heroku",
+  "name": "fittrack-v2",
   "version": "0.1.0",
   "description": "fitrack fitness log app",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "18.x",
     "npm":"9.2.0"
@@ -29,7 +29,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
