--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fittrack-v2",
   "version": "0.1.0",
   "description": "fitrack fitness log app",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": "18.x",
     "npm":"9.2.0"
