--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "engines": {
     "node": "18.x",
-    "npm":"9.2.0"
+    "npm": "9.2.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-react-views": "^0.11.0",
     "json-web-token": "^3.2.0",
     "method-override": "^3.0.0",
     "pg": "^8.8.0",
