--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fittrack-v2",
+  "name": "fittrack-frontend",
   "version": "0.1.0",
-  "private": true,
+  "main":"index.js",
   "engines": {
     "node": "18.x"
   },
