--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "fittrack-v2",
   "version": "0.1.0",
-  "private": true,
+  "main":"server.js",
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm" : "9.2.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,10 +28,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "build": "npm run build"
   },
   "eslintConfig": {
     "extends": [
