--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "npm run build"
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": [
